test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - port: 80
      name: http
      targetPort: 80
      nodePort: 30100
    # - port: 443
    #   name: https
    #   targetPort: 443
